--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "moc-to-manuscript",
+	"name": "MOC to Manuscript",
+	"version": "0.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Converts MOC files into draft manuscripts.",
+	"author": "Fletcher Graham",
+	"authorUrl": "https://github.com/fletchgraham",
+	"fundingUrl": "",
 	"isDesktopOnly": false
 }
